--- a/PrototipoPainelGerencial/TelaCliente/TelaMostrarCliente.html
+++ b/PrototipoPainelGerencial/TelaCliente/TelaMostrarCliente.html
@@ -17,8 +17,8 @@
 
 <!-- Navbar -->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #3d9992">
+    <a class="navbar-brand" href="#">Painel Gerencial</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -26,14 +26,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/painelgeral">Painel de Eventos</a>
+                <a class="nav-link" href="/painelgeral">Eventos</a>
             </li>
         </ul>
         <div class="row" style="padding-right: 20px">
             <form class="form-inline my-2 my-lg-0">
                 <div class="col-12 float-right ">
                     <input class="form-control mr-sm-2" type="search" placeholder="Cliente/Sensor">
-                    <button class="btn btn-outline-info my-2 my-sm-0 float-right " type="submit"><i class="fas fa-search"></i></button>
+                    <button class="btn btn-info my-2 my-sm-0 float-right " type="submit"><i class="fas fa-search"></i></button>
                 </div>
             </form>
             <ul class="navbar-nav mr-auto">
