--- a/PrototipoConfiguracaoGrupo/index.html
+++ b/PrototipoConfiguracaoGrupo/index.html
@@ -58,11 +58,11 @@
             <form>
                 <h3>Configurar Grupo</h3>
                 <div class="form-group col">
-                    <label for="nomegrupo">Nome Grupo</label>
+                    <label for="nomegrupo">Nome</label>
                     <input type="text" class="form-control" id="nomegrupo" placeholder="Nome do Grupo">
                 </div>
                 <div class="form-group col">
-                    <label for="descricao">Example textarea</label>
+                    <label for="descricao">Descrição</label>
                     <textarea class="form-control" id="descricao" rows="3"></textarea>
                 </div>
                 <button type="submit" class="btn btn-outline-primary">Salvar</button>
@@ -74,11 +74,11 @@
             <form>
                 <h3>Adicionar Sensores</h3>
                 <div class="form-group col">
-                    <label for="nomegrupo">Nome Sensor</label>
+                    <label for="nomegrupo">Nome</label>
                     <input type="text" class="form-control" id="nomesensor" placeholder="Nome do Grupo">
                 </div>
                 <div class="form-group col">
-                    <label for="descricao">Example textarea</label>
+                    <label for="descricao">Código de Identificação</label>
                     <input type="number" class="form-control" id="id" placeholder="00000000000">
                 </div>
                 <button type="submit" class="btn btn-outline-primary float-right">Adicionar</button>
